libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__url_https.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: HTTPS URL
expression: "`https://example.com/`"
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    value: Symbol(
        "https://example.com/",
    ),
    kind: BaseUrl,
}
