libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__url_idn.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: URL with internationalized domain name
expression: "`https://例子.测试/`"
info:
  kind: Err
---
`https://例子.测试/`
 ^
invalid identifier
expected http(s) url with trailing `/`
