libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__url_ipv6.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: URL with IPv6 address
expression: "`https://[2001:db8::1]/`"
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    value: Symbol(
        "https://[2001:db8::1]/",
    ),
    kind: BaseUrl,
}
