libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__url_percent_encoded.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: URL with percent-encoded characters
expression: "`https://example.com/%E2%82%AC/`"
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    value: Symbol(
        "https://example.com/%E2%82%AC/",
    ),
    kind: BaseUrl,
}
