libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__url_with_auth.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: URL with authentication
expression: "`https://user:pass@example.com/`"
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    name: Symbol(
        "https://user:pass@example.com/",
    ),
    kind: BaseUrl,
}
