libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__url_with_fragment.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: URL with fragment
expression: "`https://example.com/#fragment/`"
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    value: Symbol(
        "https://example.com/#fragment/",
    ),
    kind: BaseUrl,
}
