libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__url_with_query.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: URL with query parameters
expression: "`https://example.com/?query=value&param=123/`"
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    value: Symbol(
        "https://example.com/?query=value&param=123/",
    ),
    kind: BaseUrl,
}
