libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__url_with_trailing.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: URL with trailing content
expression: "`https://example.com/` next"
info:
  kind: Err
---
`https://example.com/` next
                      ^
